--- a/pagina.css
+++ b/pagina.css
@@ -47,3 +47,47 @@ header h1{
     color: gainsboro;
     text-transform: uppercase
 }
+section {
+    width: 100%;
+    height: 340px;
+    background: red;
+    display: flex;
+    justify-content: center;
+}
+section div {
+    width: 250px;
+    height: 100%;
+    background: yellow;
+    display: flex;
+    flex-direction: column; /* */
+    align-items: center;
+    margin-top: 1px;
+    border-radius: 20px;
+    justify-content: space-around;
+    
+   
+    
+}
+
+section div input {
+    border-radius: 10px;
+    border: none;
+    padding: 10px
+}
+
+section div input::placeholder{
+    color: yellowgreen;
+    
+}
+section div input:focus{
+    background-color: aqua
+}
+
+section div button {
+    cursor: pointer;
+    width: 100px;
+    height: 25px;
+    border: none;
+    background-color: orange;
+    color: wheat
+}
